add optional props to layout component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ const users = await response.json();
 const visible = false;
 ---
 
-<Layout title='hello'>
+<Layout>
   <h1>hello world</h1>
 </Layout>
 
