--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,9 @@
 ---
-const { title } = Astro.props;
+export interface Props {
+  title?: string;
+}
+
+const { title = 'Astro Crash Course' } = Astro.props as Props;
 ---
 
 <!DOCTYPE html>
@@ -8,6 +12,7 @@ const { title } = Astro.props;
     <meta charset='UTF-8' />
     <meta http-equiv='X-UA-Compatible' content='IE=edge' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
+    <meta name='description' content='Learning to build with Astro' />
     <link rel='preconnect' href='https://fonts.googleapis.com' />
     <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin />
     <link
