--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,6 @@
 ---
+import Showcase from '../components/Showcase.astro';
 import Layout from '../layouts/Layout.astro';
-const name = 'Astro';
-const style = 'purple';
 const response = await fetch(
   'https://jsonplaceholder.typicode.com/users?_limit=10'
 );
@@ -10,11 +9,6 @@ const visible = false;
 ---
 
 <Layout>
-  <h1>hello world</h1>
+  <Showcase />
+  <h1 class='text-center text-4xl mt-2'>hello world</h1>
 </Layout>
-
-<style>
-  .purple {
-    color: purple;
-  }
-</style>
