add cards, features, tabs components

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -50,6 +50,7 @@ import logo from '../images/logo.svg';
 
   .header nav ul li {
     padding: 0 10px;
+    font-size: 18px;
   }
 
   .header nav ul li a {
