--- a/src/components/Showcase.astro
+++ b/src/components/Showcase.astro
@@ -1,25 +1,45 @@
 ---
 import logos from '../images/framework-logos.png';
 import smallLogos from '../images/framework-logos-small.png';
+
+export interface Props {
+  heading?: string;
+  text?: string;
+  showExtra?: boolean;
+}
+
+const {
+  heading = 'Welcome to the Astro Crash Course',
+  text = 'Build super fast HTML-first websites using your favorite Javascript frameworks',
+  showExtra = false,
+} = Astro.props as Props;
 ---
 
 <section class='showcase'>
   <div class='showcase-text'>
-    <h1>Heading</h1>
-    <p>And some P</p>
+    <h1>{heading}</h1>
+    <p>{text}</p>
   </div>
-  <div class='showcase-img'>
-    <img src={logos} alt='' class='logos' />
-    <img src={smallLogos} alt='' class='logos-small' />
-  </div>
-  <p class='showcase-demo'>
-    <small>This is a demo website used for the crash course.</small>
-  </p>
+
+  {
+    showExtra && (
+      <>
+        <div class='showcase-img'>
+          <img src={logos} alt='' class='logos' />
+          <img src={smallLogos} alt='' class='logos-small' />
+        </div>
+        <p class='showcase-demo'>
+          <small>This is a demo website used for the crash course.</small>
+        </p>
+      </>
+    )
+  }
 </section>
 
 <style>
   .showcase {
     height: auto;
+    background-color: var(--color-secondary);
     background-image: linear-gradient(
       to bottom,
       var(--color-primary),
