--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,7 @@
 ---
+import Features from '../components/Features.astro';
 import Showcase from '../components/Showcase.astro';
+import Tabs from '../components/Tabs.astro';
 import Layout from '../layouts/Layout.astro';
 const response = await fetch(
   'https://jsonplaceholder.typicode.com/users?_limit=10'
@@ -10,5 +12,24 @@ const visible = false;
 
 <Layout>
   <Showcase />
-  <h1 class='text-center text-4xl mt-2'>hello world</h1>
+  <Features />
+  <section class='page-content'>
+    <div class='container'>
+      <h2>Get Started With Astro</h2>
+      <p>
+        Get a new Astro project up and running locally with our helpful
+        create-astro CLI wizard!
+      </p>
+      <Tabs />
+      <h3>Start Building</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta ipsum
+        deserunt inventore ut voluptate, officia maiores repellat tenetur
+        praesentium omnis est ex tempora a necessitatibus reiciendis at et
+        dignissimos. Ipsam eius consequuntur cupiditate aperiam porro, esse
+        laborum impedit nesciunt ut voluptatum assumenda aspernatur libero iusto
+        error molestias dolorum, necessitatibus labore?
+      </p>
+    </div>
+  </section>
 </Layout>
