--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -66,27 +66,29 @@ h3 {
   display: none;
 }
 
+.page-content {
+  margin: 20px 0;
+}
+
+.page-content h2,
+.page-content h3 {
+  margin: 20px 0;
+}
+
+.page-content h2 {
+  font-size: 40px;
+}
+
+.page-content h3 {
+  font-size: 25px;
+}
+
 @media (max-width: 960px) {
   .logos-small {
     display: block;
     margin: auto;
   }
   .logos {
-    display: none;
-  }
-}
-
-@media (max-width: 500px) {
-  .features .container {
-    grid-template-columns: 1fr;
-  }
-
-  h1,
-  h2 {
-    text-align: center;
-  }
-
-  .footer div:nth-child(2) {
     display: none;
   }
 }
