--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -22,6 +22,15 @@ const { title, body, dark = false } = Astro.props as Props;
     margin-bottom: 20px;
   }
 
+  .card h3 {
+    font-weight: 700;
+  }
+
+  h3,
+  p {
+    text-align: center;
+  }
+
   .dark {
     background-color: var(--color-primary);
     color: #fff;
