--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,10 +11,48 @@
     <div>
       <h3>Links</h3>
       <ul>
-        <li><a href='#'>Home</a></li>
-        <li><a href='#'>About</a></li>
-        <li><a href='#'>Blog</a></li>
+        <li><a href='/'>Home</a></li>
+        <li><a href='/about'>About</a></li>
+        <li><a href='/blog'>Blog</a></li>
       </ul>
     </div>
   </div>
 </footer>
+
+<style>
+  .footer {
+    background: var(--color-primary);
+    color: #fff;
+    text-align: center;
+    padding: 20px;
+    margin-top: 60px;
+  }
+
+  .footer .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .footer a {
+    color: #a741ff;
+  }
+
+  .footer a:hover {
+    text-decoration: underline;
+  }
+
+  .footer h3 {
+    margin-bottom: 10px;
+  }
+
+  .footer div:nth-child(1) {
+    text-align: left;
+  }
+
+  @media (max-width: 750px) {
+    .footer div:nth-child(2) {
+      display: none;
+    }
+  }
+</style>
