--- a/src/components/Showcase.astro
+++ b/src/components/Showcase.astro
@@ -25,8 +25,8 @@ const {
     showExtra && (
       <>
         <div class='showcase-img'>
-          <img src={logos} alt='' class='logos' />
-          <img src={smallLogos} alt='' class='logos-small' />
+          <img src={logos} alt='logos' class='logos' />
+          <img src={smallLogos} alt='small logos' class='logos-small' />
         </div>
         <p class='showcase-demo'>
           <small>This is a demo website used for the crash course.</small>
@@ -83,5 +83,19 @@ const {
     color: #fff;
     text-align: center;
     font-weight: 300;
+  }
+
+  .logos-small {
+    display: none;
+  }
+
+  @media (max-width: 960px) {
+    .logos-small {
+      display: block;
+      margin: auto;
+    }
+    .logos {
+      display: none;
+    }
   }
 </style>
