--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ const visible = false;
 ---
 
 <Layout>
-  <Showcase />
+  <Showcase showExtra={true} />
   <Features />
   <section class='page-content'>
     <div class='container'>
