--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,38 +1,34 @@
 ---
 export interface Props {
-  title: string;
-  body: string;
   dark?: boolean;
 }
 
-const { title, body, dark = false } = Astro.props as Props;
+const { dark = false } = Astro.props as Props;
 ---
 
 <div class={`card ${dark && 'dark'}`}>
-  <h3>{title}</h3>
-  <p>{body}</p>
+  <slot />
+  <style>
+    .card {
+      background: #fff;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      margin-bottom: 20px;
+    }
+
+    .card h3 {
+      font-weight: 700;
+    }
+
+    h3,
+    p {
+      text-align: center;
+    }
+
+    .dark {
+      background-color: var(--color-primary);
+      color: #fff;
+    }
+  </style>
 </div>
-
-<style>
-  .card {
-    background: #fff;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin-bottom: 20px;
-  }
-
-  .card h3 {
-    font-weight: 700;
-  }
-
-  h3,
-  p {
-    text-align: center;
-  }
-
-  .dark {
-    background-color: var(--color-primary);
-    color: #fff;
-  }
-</style>
