--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -78,3 +78,16 @@ h3 {
 .page-content h3 {
   font-size: 25px;
 }
+.logos-small {
+  display: none;
+}
+
+@media (max-width: 960px) {
+  .logos-small {
+    display: block;
+    margin: auto;
+  }
+  .logos {
+    display: none;
+  }
+}
