--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,22 +1,23 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
+import Showcase from '../components/Showcase.astro';
 
-const response = await fetch(
-  'https://jsonplaceholder.typicode.com/posts?_limit=5'
-);
-const posts = await response.json();
-console.log(posts);
+const posts = await Astro.glob('../content/posts/*.md');
 ---
 
 <Layout title='Astro Blog'>
+  <Showcase
+    heading='Astro Blog'
+    text="Here's where you can learn not too much about Astro!"
+  />
   <section class='page-content'>
     <div class='container'>
       {
         posts.map(post => (
           <Card>
-            <h3>{post.title}</h3>
-            <p>{post.body}</p>
+            <h3>{post.frontmatter.title}</h3>
+            <p>{post.frontmatter.excerpt}</p>
           </Card>
         ))
       }
