--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -15,7 +15,7 @@ const posts = await Astro.glob('../content/posts/*.md');
           <Card>
             <h3>{post.frontmatter.title}</h3>
             <p>{post.frontmatter.excerpt}</p>
-            <a href={`/blog/posts/${post.frontmatter.slug}`} class='btn'>
+            <a href={`/blog/${post.frontmatter.slug}`} class='btn'>
               Read More
             </a>
           </Card>
