--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -1,9 +1,9 @@
 ---
-import Layout from '../../../layouts/Layout.astro';
-import Card from '../../../components/Card.astro';
+import Layout from '../../layouts/Layout.astro';
+import Card from '../../components/Card.astro';
 
 export async function getStaticPaths() {
-  const posts = await Astro.glob('../../../content/posts/*.md');
+  const posts = await Astro.glob('../../content/posts/*.md');
 
   return posts.map(post => ({
     params: { slug: post.frontmatter.slug },
