--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,11 +11,11 @@ import logo from '../images/logo.svg';
     </div>
     <nav>
       <ul>
-        <li><a href='index.html'>Home</a></li>
+        <li><a href='/'>Home</a></li>
         <li>
-          <a href='about.html'>About</a>
+          <a href='/about'>About</a>
         </li>
-        <li><a href='blog.html'>Blog</a></li>
+        <li><a href='/blog'>Blog</a></li>
       </ul>
     </nav>
   </div>
